--- a/src/.env.example
+++ b/src/.env.example
@@ -4,5 +4,11 @@ PORT =
 MY_VERIFY_FB_TOKEN =
 FB_PAGE_TOKEN = 
 
+PAGE_ACCESS_TOKEN=
+GOOGLE_PROJECT_ID=
+DF_LANGUAGE_CODE=
+GOOGLE_CLIENT_ID=
+GOOGLE_PRIVATE_KEY=
+
 #nomas pa ver
 
