--- a/package.json
+++ b/package.json
@@ -14,18 +14,29 @@
     "facebook",
     "messenger"
   ],
-  "author": "",
+  "author": "heidy",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "dialogflow": "^1.2.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.19"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HeidyOlmosCampos/bot-fb-messenger.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HeidyOlmosCampos/bot-fb-messenger/issues"
+  },
+  "homepage": "https://github.com/HeidyOlmosCampos/bot-fb-messenger#readme"
 }
